--- a/Pitch_Deck/Views/Home/Index.cshtml
+++ b/Pitch_Deck/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     @*<p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>*@
-                    <a class="btn btn-primary btn-xl" href="#about">Get a Free Quote</a>
+                    <a class="btn btn-primary btn-xl" asp-controller="Home" asp-action="Test">Get a Free Quote</a>
                 </div>
             </div>
         </div>
@@ -238,6 +238,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
 </section>
     <!-- Footer-->
